# interest_calculator

./: README.md  __main__.py  pyproject.toml
simulation/: __init__.py  fixed_income.py
simulation/tests/: test_fixed_interest_data_simulator.py  test_future_value_with_contributions.py  test_future_value_without_contribution.py  test_simulate.py
web/: app.py  routes.py  schemas.py
web/tests/: conftest.py  test_simulations.py
