[tool.poetry]
name = "interest-calculator"
version = "0.1.0"
description = "Calculadora de juros compostos com aportes mensais"
authors = ["Elysson MR <elyssonmr@gmail.com>"]
readme = "README.md"
packages = [{include = "simulation"}]

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
ruff = "^0.7.4"
taskipy = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 79
extend-exclude = ['']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = ' --cov=simulation --cov-report term-missing -p no:warnings'
asyncio_mode = 'auto'

[tool.coverage.run]
omit = ['']

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
run = 'python .'
pre_test = 'task lint'
test = 'pytest -s -vv'
post_test = 'coverage html'
